testsuite/tests/rename/should_fail/rnfail016.stderr

rnfail016.hs:6:7: error:
    @-pattern in expression context: x@x
    Type application syntax requires a space before '@'
